Fixed overflow issue

--- a/assets/styles/component-styles/service-plans.scss
+++ b/assets/styles/component-styles/service-plans.scss
@@ -60,6 +60,7 @@
   &.--title {
     text-align: left;
     padding: 8vw 5vw;
+    overflow: visible;
 
     p {
       padding-bottom: 3vw;
